part1_a tool tips added. Need to fix styling as well as bars that are too tall

--- a/part1_a/part1_a.css
+++ b/part1_a/part1_a.css
@@ -23,3 +23,14 @@ body {
   margin-left: 20px;
   text-decoration: underline;
 }
+
+div#container {
+  width: 1000px;
+  height: 600px;
+  margin: auto;
+}
+
+svg {
+  width: 100%;
+  height: 100%;
+}
